5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1582_996.log
== SUBMITION (2019-03-12 17:09:05) 
-- CODE:
print("***** ")
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- EXECUTION TIME:
0.126654
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
*  ^  * 
* - - - * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:09:08) 
-- CODE:
print("***** ")
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- OUTPUT:
***** 
(* o o *) 
*  ^  * 
* - - - * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:09:10) 
-- CODE:
print("***** ")
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- OUTPUT:
***** 
(* o o *) 
*  ^  * 
* - - - * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:09:34) 
-- CODE:
print("*****")
print("(* o o *) ")
print("*  ^  * ")
print("*  - - -  * ")
print("*****")
-- OUTPUT:
*****
(* o o *) 
*  ^  * 
*  - - -  * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:10:12) 
-- CODE:
print("*****")
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- OUTPUT:
*****
(* o o *) 
*  ^  * 
* - - - * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:10:16) 
-- CODE:
print("*****")
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- EXECUTION TIME:
0.207637
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *) 
*  ^  * 
* - - - * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:10:19) 
-- CODE:
print("*****")
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- OUTPUT:
*****
(* o o *) 
*  ^  * 
* - - - * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:10:23) 
-- CODE:
print("*****")
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- OUTPUT:
*****
(* o o *) 
*  ^  * 
* - - - * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:10:41) 
-- CODE:
print(*****)
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:11:29) 
-- CODE:
print("*****")
print("(* o o *) ")
print("*  ^  * ")
print("* - - - * ")
print("*****")
-- OUTPUT:
*****
(* o o *) 
*  ^  * 
* - - - * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:14:26) 
-- CODE:
print("* - - - * ")
print("*  ^  * ")
print("* - - - *")
print("*****")
print("*****")
-- EXECUTION TIME:
0.156375
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* - - - * 
*  ^  * 
* - - - *
*****
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:14:29) 
-- CODE:
print("* - - - * ")
print("*  ^  * ")
print("* - - - *")
print("*****")
print("*****")
-- OUTPUT:
* - - - * 
*  ^  * 
* - - - *
*****
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:14:58) 
-- CODE:
print("* - - - * ")
print("*  ^  * ")
print("* - - - *")
print("* * * * *")
print("* * * * *")
-- OUTPUT:
* - - - * 
*  ^  * 
* - - - *
* * * * *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:32:37) 
-- CODE:
print("*****")
print(("* o o *")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- ERROR:
File "XXXX", line 3
    print("* ^ *")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:15) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *)
* ^ *
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:33:21) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- EXECUTION TIME:
0.143198
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
* ^ *
* - - - *
* * * * *
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:23) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *)
* ^ *
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:33) 
-- CODE:
print("*****")
print("(* o  o *)")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o  o *)
* ^ *
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:03) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *)
* ^ *
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:45) 
-- CODE:
print("*****")
print("(* o o *)")
print(" * ^ * ")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *)
 * ^ * 
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:49) 
-- CODE:
print("*****")
print("(* o o *) ")
print(" * ^ * ")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *) 
 * ^ * 
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:15) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *) 
* ^ *
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:27) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *)
* ^ *
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:29) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* - - - *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *)
* ^ *
* - - - *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:43) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print("* * * * *")
-- OUTPUT:
*****
(* o o *)
* ^ *
* --- *
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:57) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:36:01) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.180867
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
* ^ *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
